--- a/source/less/blocks/additionally.less
+++ b/source/less/blocks/additionally.less
@@ -1,6 +1,6 @@
 .additionally__title {
   position: relative;
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
   font-size: 24px;
   line-height: 24px;
@@ -56,7 +56,7 @@
 }
 
 .additionally__subtitle {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 16px;
