--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -8,7 +8,7 @@
 }
 
 .example__title {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 36px;
   line-height: 40px;
   text-align: center;
@@ -35,7 +35,7 @@
 }
 
 .example__info {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 24px;
   line-height: 24px;
   text-align: center;
@@ -61,7 +61,7 @@ legend,
 }
 
 .example__waste {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 14px;
   line-height: 20px;
   text-align: center;
@@ -97,7 +97,7 @@ legend,
 }
 
 .example__button {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   border: none;
   background-color: transparent;
   font-size: 16px;
