--- a/source/less/blocks/product-card.less
+++ b/source/less/blocks/product-card.less
@@ -1,17 +1,17 @@
 .product__title {
   position: relative;
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
   font-size: 36px;
   line-height: 36px;
   color: @color-black;
-  padding: 32px 0 40px;
+  padding: 33px 0 43px;
   width: 280px;
   margin: 0 auto;
 }
 
 .product-card__subtitle {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
@@ -126,7 +126,7 @@
 }
 
 .product-card__title {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   line-height: 20px;
   font-weight: 400;
@@ -147,7 +147,7 @@
 
 .product-card__button-more {
   position: relative;
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
@@ -248,11 +248,11 @@
   }
 
   .product-card__inner-more {
-    padding: 162px 38px 36px;
+    padding: 161px 38px 36px;
     justify-items: center;
     align-items: center;
     width: 324px;
-    outline: 2px solid @color-grey;
+    border: 2px solid @color-grey;
   }
 
   .product-card__text {
@@ -264,7 +264,7 @@
 
   .product-card__button-more {
     margin: 0;
-    padding: 10px 79px;
+    padding: 10px 73px;
   }
 
   .product-card__button-more::after {
@@ -332,11 +332,11 @@
 
   .product-card__inner-more {
     width: auto;
-    padding: 160px 38px 41px;
+    padding: 158px 38px 35px;
   }
 
   .product-card__button-more {
-    padding: 10px 39px;
+    padding: 12px 38px;
   }
 
   .product-card__button-all {
