--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -21,7 +21,7 @@
   font-size: 24px;
   line-height: 37px;
   text-transform: uppercase;
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   margin: 0;
   padding: 30px 0;
 }
@@ -89,7 +89,7 @@
 }
 
 .advantages__link {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   line-height: 16px;
   text-align: center;
