--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -6,11 +6,11 @@
 }
 
 .footer__wrapper {
-  padding: 39px 0 22px;
+  padding: 45px 0 22px;
   position: relative;
 }
 
-.footer-social__list {
+.footer__list-social {
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -67,7 +67,7 @@
   justify-content: space-between;
 }
 
-.footer-social__link {
+.footer__link-social {
   display: flex;
   height: 33px;
   width: 40px;
@@ -77,17 +77,28 @@
   color: @color-dark-grey;
 }
 
-.footer-social__link:hover,
-.footer__copyright-link:hover {
-  color: @color-green;
+.footer__list-social .footer__link-social {
+  fill: @color-dark-grey;
+
+  &:active {
+    opacity: 0.3;
+  }
+
+  &:hover {
+    fill: @color-green;
+  }
 }
 
-.footer-social__link:active {
-  opacity: 0.3;
-}
+.footer__copyright .footer__copyright-link {
+  fill: @color-dark-grey;
 
-.footer__copyright-link {
-  color: @color-dark-grey;
+  &:active {
+    opacity: 0.3;
+  }
+
+  &:hover {
+    fill: @color-green;
+  }
 }
 
 .footer__copyright:active {
@@ -100,8 +111,8 @@
     min-width: 768px;
   }
 
-  .footer-social__list::after,
-  .footer-social__list::before {
+  .footer__list-social::after,
+  .footer__list-social::before {
     display: none;
   }
 
@@ -109,7 +120,7 @@
     margin: 0;
   }
 
-  .footer-social__list {
+  .footer__list-social {
     padding-left: 28px;
     margin-bottom: 0;
   }
@@ -141,6 +152,6 @@
 
   .footer__wrapper {
     width: 1220px;
-    padding: 55px 0;
+    padding: 50px 0;
   }
 }
