--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -57,7 +57,7 @@
 }
 
 .main-nav__link {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-weight: 500;
   font-size: 20px;
   line-height: 20px;
