--- a/source/less/blocks/nutrition.less
+++ b/source/less/blocks/nutrition.less
@@ -25,7 +25,7 @@
 }
 
 .nutrition__title {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
   font-size: 36px;
   line-height: 36px;
@@ -37,7 +37,7 @@
 }
 
 .nutrition__slogan {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 14px;
   line-height: 14px;
   text-align: center;
@@ -45,11 +45,11 @@
   margin: 0;
   color: @color-white;
   z-index: 2;
-  padding-bottom: 33px;
+  padding-bottom: 27px;
 }
 
 .nutrition__link {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
   text-transform: uppercase;
@@ -139,6 +139,7 @@
 
   .nutrition__slogan {
     padding-bottom: 51px;
+    width: 283px;
   }
 
   .nutrition__link {
@@ -159,11 +160,11 @@
 
   .nutrition__background-image {
     background-image: url("../img/bg-cat-desktop.jpg");
-    width: 1044px;
-    height: 696px;
+    width: 59%;
+    height: 694px;
     position: absolute;
     left: 610px;
-    bottom: -268px;
+    top: -114px;
     background-color: @color-green;
   }
 
