--- a/source/less/blocks/show-more.less
+++ b/source/less/blocks/show-more.less
@@ -1,5 +1,5 @@
 .show-more__title {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   line-height: 20px;
   text-align: center;
