--- a/source/less/global/common.less
+++ b/source/less/global/common.less
@@ -25,7 +25,7 @@ img {
 }
 
 .button {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
@@ -43,13 +43,3 @@ img {
 .button:active {
   color: rgba(256, 256, 256, 0.3);
 }
-
-// input[type=number]::-webkit-outer-spin-button,
-// input[type=number]::-webkit-inner-spin-button {
-//   -webkit-appearance: none;
-//   margin: 0;
-// }
-
-// input[type=number] {
-//   -moz-appearance: textfield;
-// }
